--- a/eproxy/rebar.config
+++ b/eproxy/rebar.config
@@ -13,7 +13,8 @@
 {deps, [
   jsx,
   lager,
-  observer_cli
+  observer_cli,
+  {cool_tools, {git, "https://github.com/yangcancai.git/cool_tools.git", {branch, "main"}}}
   %,
   % cowboy,
   % {eredis, {git, "https://github.com/wooga/eredis.git", {tag, "v1.2.0"}}},
