erlang upgrade to otp26

--- a/eproxy/rebar.config
+++ b/eproxy/rebar.config
@@ -8,13 +8,13 @@
     warn_unused_import,
     warnings_as_errors
 ]}.
-{minimum_otp_vsn, "22"}.
+{minimum_otp_vsn, "26"}.
 {deps, [
-    jsx,
+    {jiffy, "1.1.1"},
     observer_cli,
     cowlib,
-    {cool_tools, {git, "https://github.com/yangcancai.git/cool_tools.git", {branch, "main"}}},
-    eca
+    {cool_tools, {git, "https://github.com/yangcancai/cool_tools.git", {branch, "main"}}},
+    {eca, {git, "https://github.com/yangcancai/eca.git", {branch, "main"}}}
     %,
     % cowboy,
     % {eredis, {git, "https://github.com/wooga/eredis.git", {tag, "v1.2.0"}}},
@@ -94,12 +94,10 @@
         {erl_opts, [
             {d, 'TEST'},
             nowarn_export_all,
-            export_all,
-            {parse_transform, lager_transform}
+            export_all
         ]},
         {shell, [{config, "config/sys.config"}]},
         {deps, [
-            jsx,
             recon,
             meck,
             {cth_readable, {git, "https://github.com/ferd/cth_readable.git", {tag, "v1.5.1"}}}
@@ -139,3 +137,6 @@
     %% The erlfmt formatter interface
     {formatter, erlfmt_formatter}
 ]}.
+
+{plugins, [{pc, "1.15.0"}]}.
+{pc_clang_db, true}.
